# project_pse

./: Baan.cpp  Baan.h  CMakeLists.txt  Vekeerssimulatie.cpp  Vekeerssimulatie.h  Verkeerslicht.cpp  Verkeerslicht.h  Voertuig.cpp  Voertuig.h  main.cpp
gtest/include/gtest/internal/: gtest-filepath.h
src/: Auto.cpp  Auto.h  Baan.cpp  Baan.h  BaanTests.cpp  Bushalte.cpp  Bushalte.h  OurTestingUtils.cpp  OurTestingUtils.h  Prioriteitsvoertuig.cpp  Prioriteitsvoertuig.h  TicTacToeUtils.cpp  Verkeerslicht.cpp  Verkeerslicht.h  VerkeerslichtTests.cpp  Verkeerssimulatie.cpp  Verkeerssimulatie.h  VerkeerssimulatieInputTests.cpp  VerkeerssimulatieOutputTests.cpp  VerkeerssimulatieTests.cpp  VerkeerssituatieReader.cpp  VerkeerssituatieReader.h  Voertuig.cpp  Voertuig.h  VoertuigFactory.cpp  VoertuigFactory.h  VoertuigFactoryTests.cpp  VoertuigTests.cpp  Voertuig_generator.cpp  Voertuig_generator.h  Voertuig_generatorTests.cpp  main.cpp
src/voertuigen/: Auto.cpp  Auto.h  Brandweerwagen.cpp  Brandweerwagen.h  Bus.cpp  Bus.h  Politiecombi.cpp  Politiecombi.h  Voertuig.cpp  Voertuig.h  Ziekenwagen.cpp  Ziekenwagen.h
test_files/: grafische_impressie.txt
test_files/output_tests/: BushalteTestExpectedOutput.txt  HappyDay1VoertuigZonderLichtenTestOutput.txt  HappyDayVoertuigenMetLichtTestExpectedOutput.txt  PrioriteitsvoertuigenTestExpectedOutput.txt  happyDayExpectedOut.txt  happyDayTekenExpectedOut.txt  happyDayTekenTestOutput.txt  happyDayTestOutput.txt
test_files/reader_tests/input/: happyDay.xml  illegalError1.txt  illegalError11.txt  illegalError12.txt  illegalError13.txt  illegalError14.txt  illegalError15.txt  illegalError16.txt  illegalError17.txt  illegalError2.txt  illegalError3.txt  illegalError4.txt  illegalError5.txt  illegalError6.txt  illegalError7.txt  illegalError8.txt  illegalError9.txt  illegalVerkeerssituatie10.xml  illegalVerkeerssituatie11.xml  illegalVerkeerssituatie12.xml  illegalVerkeerssituatie13.xml  illegalVerkeerssituatie14.xml  illegalVerkeerssituatie15.xml  illegalVerkeerssituatie16.xml  illegalVerkeerssituatie17.xml  illegalVerkeerssituatie2.xml  illegalVerkeerssituatie3.xml  illegalVerkeerssituatie4.xml  illegalVerkeerssituatie5.xml  illegalVerkeerssituatie6.xml  illegalVerkeerssituatie7.xml  illegalVerkeerssituatie8.xml  illegalVerkeerssituatie9.xml  zzzError.txt
test_files/verkeerssituaties/: gewone_verkeerssituatie.xml
tinyXML/: test.xml
